; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/pci/saa7146/extr_mxb.c_vidioc_g_tuner.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/pci/saa7146/extr_mxb.c_vidioc_g_tuner.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.v4l2_tuner = type { i32, i32, i32, i32, i64 }
%struct.saa7146_dev = type { i64 }
%struct.mxb = type { i32 }
%struct.saa7146_fh = type { %struct.saa7146_dev* }

@.str = private unnamed_addr constant [59 x i8] c"VIDIOC_G_TUNER: channel %d does not have a tuner attached\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [20 x i8] c"VIDIOC_G_TUNER: %d\0A\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"TV Tuner\00", align 1
@V4L2_TUNER_ANALOG_TV = common dso_local global i32 0, align 4
@V4L2_TUNER_CAP_NORM = common dso_local global i32 0, align 4
@V4L2_TUNER_CAP_STEREO = common dso_local global i32 0, align 4
@V4L2_TUNER_CAP_LANG1 = common dso_local global i32 0, align 4
@V4L2_TUNER_CAP_LANG2 = common dso_local global i32 0, align 4
@V4L2_TUNER_CAP_SAP = common dso_local global i32 0, align 4
@tuner = common dso_local global i32 0, align 4
@g_tuner = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i8*, %struct.v4l2_tuner*)* @vidioc_g_tuner to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vidioc_g_tuner(%struct.file* %0, i8* %1, %struct.v4l2_tuner* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.file*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.v4l2_tuner*, align 8
  %8 = alloca %struct.saa7146_dev*, align 8
  %9 = alloca %struct.mxb*, align 8
  store %struct.file* %0, %struct.file** %5, align 8
  store i8* %1, i8** %6, align 8
  store %struct.v4l2_tuner* %2, %struct.v4l2_tuner** %7, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = bitcast i8* %10 to %struct.saa7146_fh*
  %12 = getelementptr inbounds %struct.saa7146_fh, %struct.saa7146_fh* %11, i32 0, i32 0
  %13 = load %struct.saa7146_dev*, %struct.saa7146_dev** %12, align 8
  store %struct.saa7146_dev* %13, %struct.saa7146_dev** %8, align 8
  %14 = load %struct.saa7146_dev*, %struct.saa7146_dev** %8, align 8
  %15 = getelementptr inbounds %struct.saa7146_dev, %struct.saa7146_dev* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = inttoptr i64 %16 to %struct.mxb*
  store %struct.mxb* %17, %struct.mxb** %9, align 8
  %18 = load %struct.v4l2_tuner*, %struct.v4l2_tuner** %7, align 8
  %19 = getelementptr inbounds %struct.v4l2_tuner, %struct.v4l2_tuner* %18, i32 0, i32 4
  %20 = load i64, i64* %19, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %29

22:                                               ; preds = %3
  %23 = load %struct.v4l2_tuner*, %struct.v4l2_tuner** %7, align 8
  %24 = getelementptr inbounds %struct.v4l2_tuner, %struct.v4l2_tuner* %23, i32 0, i32 4
  %25 = load i64, i64* %24, align 8
  %26 = call i32 @DEB_D(i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str, i64 0, i64 0), i64 %25)
  %27 = load i32, i32* @EINVAL, align 4
  %28 = sub nsw i32 0, %27
  store i32 %28, i32* %4, align 4
  br label %64

29:                                               ; preds = %3
  %30 = load %struct.v4l2_tuner*, %struct.v4l2_tuner** %7, align 8
  %31 = getelementptr inbounds %struct.v4l2_tuner, %struct.v4l2_tuner* %30, i32 0, i32 4
  %32 = load i64, i64* %31, align 8
  %33 = call i32 @DEB_EE(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0), i64 %32)
  %34 = load %struct.v4l2_tuner*, %struct.v4l2_tuner** %7, align 8
  %35 = call i32 @memset(%struct.v4l2_tuner* %34, i32 0, i32 24)
  %36 = load %struct.v4l2_tuner*, %struct.v4l2_tuner** %7, align 8
  %37 = getelementptr inbounds %struct.v4l2_tuner, %struct.v4l2_tuner* %36, i32 0, i32 3
  %38 = load i32, i32* %37, align 4
  %39 = call i32 @strscpy(i32 %38, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i32 4)
  %40 = load i32, i32* @V4L2_TUNER_ANALOG_TV, align 4
  %41 = load %struct.v4l2_tuner*, %struct.v4l2_tuner** %7, align 8
  %42 = getelementptr inbounds %struct.v4l2_tuner, %struct.v4l2_tuner* %41, i32 0, i32 2
  store i32 %40, i32* %42, align 8
  %43 = load i32, i32* @V4L2_TUNER_CAP_NORM, align 4
  %44 = load i32, i32* @V4L2_TUNER_CAP_STEREO, align 4
  %45 = or i32 %43, %44
  %46 = load i32, i32* @V4L2_TUNER_CAP_LANG1, align 4
  %47 = or i32 %45, %46
  %48 = load i32, i32* @V4L2_TUNER_CAP_LANG2, align 4
  %49 = or i32 %47, %48
  %50 = load i32, i32* @V4L2_TUNER_CAP_SAP, align 4
  %51 = or i32 %49, %50
  %52 = load %struct.v4l2_tuner*, %struct.v4l2_tuner** %7, align 8
  %53 = getelementptr inbounds %struct.v4l2_tuner, %struct.v4l2_tuner* %52, i32 0, i32 0
  store i32 %51, i32* %53, align 8
  %54 = load %struct.mxb*, %struct.mxb** %9, align 8
  %55 = getelementptr inbounds %struct.mxb, %struct.mxb* %54, i32 0, i32 0
  %56 = load i32, i32* %55, align 4
  %57 = load %struct.v4l2_tuner*, %struct.v4l2_tuner** %7, align 8
  %58 = getelementptr inbounds %struct.v4l2_tuner, %struct.v4l2_tuner* %57, i32 0, i32 1
  store i32 %56, i32* %58, align 4
  %59 = load %struct.saa7146_dev*, %struct.saa7146_dev** %8, align 8
  %60 = load i32, i32* @tuner, align 4
  %61 = load i32, i32* @g_tuner, align 4
  %62 = load %struct.v4l2_tuner*, %struct.v4l2_tuner** %7, align 8
  %63 = call i32 @call_all(%struct.saa7146_dev* %59, i32 %60, i32 %61, %struct.v4l2_tuner* %62)
  store i32 %63, i32* %4, align 4
  br label %64

64:                                               ; preds = %29, %22
  %65 = load i32, i32* %4, align 4
  ret i32 %65
}

declare dso_local i32 @DEB_D(i8*, i64) #1

declare dso_local i32 @DEB_EE(i8*, i64) #1

declare dso_local i32 @memset(%struct.v4l2_tuner*, i32, i32) #1

declare dso_local i32 @strscpy(i32, i8*, i32) #1

declare dso_local i32 @call_all(%struct.saa7146_dev*, i32, i32, %struct.v4l2_tuner*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
